--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.5.2",
-    "bune-common": "1.0.8",
+    "@nestjs/swagger": "^7.1.17",
+    "@prisma/client": "latest",
+    "bune-common": "^1.0.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-type-json": "^0.3.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "type-fest": "^4.8.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
