--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,5 +53,10 @@ jobs:
 
     - name: Verify
       run: echo ${{ steps.docker_build.outputs.digest }}
-        
+
+    - name: Pull Docker Image
+      run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/bune-blog
+
+    - name: Run Docker Container
+      run: docker run -d -p 9698:9698 ${{ secrets.DOCKERHUB_USERNAME }}/bune-blog
      
