--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,8 @@ jobs:
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v1
       id: buildx
+      with: 
+        platforms: linux/amd64,linux/arm64
 
     - name: Cache Docker Image Layers
       uses: actions/cache@v2
@@ -50,6 +52,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/bune-blog
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
+        platforms: linux/amd64,linux/arm64
 
     - name: Verify
       run: echo ${{ steps.docker_build.outputs.digest }}
