--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
-    "@prisma/client": "latest",
-    "bune-common": "^1.0.15",
+    "@prisma/client": "^5.7.1",
+    "bune-common": "^1.0.16",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
@@ -67,7 +67,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.5.2",
+    "prisma": "^5.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
